# PapiWrapper

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
example/: example.cpp
include/: papiobserver.h  papiobserverPAR.h  papiwrapper.h  papiwrapperutil.h
test/: test.cpp
